[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -128.0
margin_right = 94.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="VBoxContainer"]
margin_right = 94.0
margin_bottom = 24.0
text = "Fullscreen"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 94.0
margin_bottom = 48.0
text = "options"

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 94.0
margin_bottom = 72.0
text = "run game"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 94.0
margin_bottom = 96.0
text = "leave game"

[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
